--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,16 +1,13 @@
 <%- include('partials/_header') -%>
+
 <body>
      <div class="tm-page-wrap mx-auto">
           <div class="position-relative">
                <%- include('partials/_navigation') -%>
 
-               <div
-                    class="tm-welcome-container tm-fixed-header tm-fixed-header-2"
-               >
+               <div class="tm-welcome-container tm-fixed-header tm-fixed-header-2">
                     <div class="text-center">
-                         <p
-                              class="pt-5 px-3 tm-welcome-text tm-welcome-text-2 mb-1 mt-lg-0 mt-5 text-white mx-auto"
-                         >
+                         <p class="pt-5 px-3 tm-welcome-text tm-welcome-text-2 mb-1 mt-lg-0 mt-5 text-white mx-auto">
                               Another Image BG<br />it can be fixed.<br />Content
                               will simply slide over.
                          </p>
@@ -27,12 +24,8 @@
                     <div class="mx-auto tm-content-container">
                          <div class="row mt-3 mb-5 pb-3">
                               <div class="col-12">
-                                   <div
-                                        class="mx-auto tm-about-text-container px-3"
-                                   >
-                                        <h2
-                                             class="tm-page-title mb-4 tm-text-primary"
-                                        >
+                                   <div class="mx-auto tm-about-text-container px-3">
+                                        <h2 class="tm-page-title mb-4 tm-text-primary">
                                              About the Video Catalog
                                         </h2>
                                         <p class="mb-4">
@@ -45,11 +38,8 @@
                                              can use it for commercial or
                                              non-commercial work. If you wish to
                                              support
-                                             <a
-                                                  href="https://templatemo.com"
-                                                  class="tm-text-primary"
-                                                  >TemplateMo</a
-                                             >, please contact us.
+                                             <a href="https://templatemo.com" class="tm-text-primary">TemplateMo</a>,
+                                             please contact us.
                                         </p>
                                         <p class="mb-4">
                                              You are <u>not allowed</u> to
@@ -84,21 +74,13 @@
                          </div>
                     </div>
 
-                    <div
-                         class="parallax-window"
-                         data-parallax="scroll"
-                         data-image-src="img/about-2.jpg"
-                    ></div>
+                    <div class="parallax-window" data-parallax="scroll" data-image-src="img/about-2.jpg"></div>
 
                     <div class="mx-auto tm-content-container mt-4 px-3">
                          <div class="row tm-catalog-item-list mb-4">
-                              <div
-                                   class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item"
-                              >
+                              <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                                    <div class="tm-bg-gray p-4">
-                                        <i
-                                             class="fas fa-headphones fa-5x p-3 mb-4 tm-about-icon"
-                                        ></i>
+                                        <i class="fas fa-headphones fa-5x p-3 mb-4 tm-about-icon"></i>
                                         <h3 class="tm-text-primary mb-3">
                                              Cras convallis mollis justo
                                         </h3>
@@ -111,13 +93,9 @@
                                         </p>
                                    </div>
                               </div>
-                              <div
-                                   class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item"
-                              >
+                              <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                                    <div class="tm-bg-gray p-4">
-                                        <i
-                                             class="fas fa-broadcast-tower fa-5x p-3 mb-4 tm-about-icon"
-                                        ></i>
+                                        <i class="fas fa-broadcast-tower fa-5x p-3 mb-4 tm-about-icon"></i>
                                         <h3 class="tm-text-primary mb-3">
                                              Nullam dictum pretium
                                         </h3>
@@ -130,13 +108,9 @@
                                         </p>
                                    </div>
                               </div>
-                              <div
-                                   class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item"
-                              >
+                              <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                                    <div class="tm-bg-gray p-4">
-                                        <i
-                                             class="fas fa-film fa-5x p-3 mb-4 tm-about-icon"
-                                        ></i>
+                                        <i class="fas fa-film fa-5x p-3 mb-4 tm-about-icon"></i>
                                         <h3 class="tm-text-primary mb-3">
                                              Etiam in quam dolor
                                         </h3>
@@ -150,13 +124,9 @@
                                         </p>
                                    </div>
                               </div>
-                              <div
-                                   class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item"
-                              >
+                              <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                                    <div class="tm-bg-gray p-4">
-                                        <i
-                                             class="far fa-map fa-5x p-3 mb-4 tm-about-icon"
-                                        ></i>
+                                        <i class="far fa-map fa-5x p-3 mb-4 tm-about-icon"></i>
                                         <h3 class="tm-text-primary mb-3">
                                              Duis ornare felis nec orci
                                         </h3>
@@ -169,13 +139,9 @@
                                         </p>
                                    </div>
                               </div>
-                              <div
-                                   class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item"
-                              >
+                              <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                                    <div class="tm-bg-gray p-4">
-                                        <i
-                                             class="fas fa-rainbow fa-5x p-3 mb-4 tm-about-icon"
-                                        ></i>
+                                        <i class="fas fa-rainbow fa-5x p-3 mb-4 tm-about-icon"></i>
                                         <h3 class="tm-text-primary mb-3">
                                              Class aptent taciti sociosqu
                                         </h3>
@@ -188,13 +154,9 @@
                                         </p>
                                    </div>
                               </div>
-                              <div
-                                   class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item"
-                              >
+                              <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                                    <div class="tm-bg-gray p-4">
-                                        <i
-                                             class="fas fa-cloud-sun-rain fa-5x p-3 mb-4 tm-about-icon"
-                                        ></i>
+                                        <i class="fas fa-cloud-sun-rain fa-5x p-3 mb-4 tm-about-icon"></i>
                                         <h3 class="tm-text-primary mb-3">
                                              Suspendisse ut malesuada
                                         </h3>
@@ -211,11 +173,7 @@
                          </div>
                     </div>
 
-                    <div
-                         class="parallax-window"
-                         data-parallax="scroll"
-                         data-image-src="img/about-3.jpg"
-                    ></div>
+                    <div class="parallax-window" data-parallax="scroll" data-image-src="img/about-3.jpg"></div>
                </div>
           </main>
 
