--- a/views/add.ejs
+++ b/views/add.ejs
@@ -1,15 +1,12 @@
 <%- include('partials/_header') -%>
+
 <body>
      <div class="tm-page-wrap mx-auto">
           <div class="position-relative">
                <%- include('partials/_navigation') -%>
-               <div
-                    class="tm-welcome-container tm-fixed-header tm-fixed-header-3"
-               >
+               <div class="tm-welcome-container tm-fixed-header tm-fixed-header-3">
                     <div class="text-center">
-                         <p
-                              class="pt-5 px-3 tm-welcome-text tm-welcome-text-2 mb-1 mt-lg-0 mt-5 text-white mx-auto"
-                         >
+                         <p class="pt-5 px-3 tm-welcome-text tm-welcome-text-2 mb-1 mt-lg-0 mt-5 text-white mx-auto">
                               Talk to Us<br />about any question you have
                          </p>
                     </div>
@@ -25,12 +22,8 @@
                     <div class="mx-auto tm-content-container">
                          <div class="row mt-3 pb-3">
                               <div class="col-12">
-                                   <div
-                                        class="mx-auto tm-about-text-container px-3"
-                                   >
-                                        <h2
-                                             class="tm-page-title mb-4 tm-text-primary"
-                                        >
+                                   <div class="mx-auto tm-about-text-container px-3">
+                                        <h2 class="tm-page-title mb-4 tm-text-primary">
                                              Add New Photo
                                         </h2>
                                         <p>
@@ -52,13 +45,8 @@
                                              can use it for commercial or
                                              non-commercial work. If you wish to
                                              suport
-                                             <a
-                                                  rel="nofollow"
-                                                  target="_parent"
-                                                  href="https://templatemo.com"
-                                                  class="tm-text-primary"
-                                                  >TemplateMo</a
-                                             >, please contact us.
+                                             <a rel="nofollow" target="_parent" href="https://templatemo.com"
+                                                  class="tm-text-primary">TemplateMo</a>, please contact us.
                                         </p>
                                    </div>
                               </div>
@@ -66,42 +54,23 @@
                          <div class="mx-auto pb-3 tm-about-text-container">
                               <div class="row">
                                    <div class="col-lg-12 mb-5">
-                                        <form
-                                             method="POST"
-                                             action="/photos"
-                                             class="tm-contact-form"
-                                             encType="multipart/form-data"
-                                        >
+                                        <form method="POST" action="/photos" class="tm-contact-form"
+                                             encType="multipart/form-data">
                                              <div class="form-group">
-                                                  <input
-                                                       type="text"
-                                                       name="title"
-                                                       class="form-control rounded-0"
-                                                       placeholder="Photo Title"
-                                                       required=""
-                                                  />
+                                                  <input type="text" name="title" class="form-control rounded-0"
+                                                       placeholder="Photo Title" required="" />
                                              </div>
                                              <div class="form-group">
-                                                  <textarea
-                                                       rows="8"
-                                                       name="description"
-                                                       class="form-control rounded-0"
-                                                       placeholder="Photo Description"
-                                                       required=""
-                                                  ></textarea>
+                                                  <textarea rows="8" name="description" class="form-control rounded-0"
+                                                       placeholder="Photo Description" required=""></textarea>
                                                   <div class="form-group">
-                                                       <input
-                                                            type="file"
-                                                            name="image"
-                                                            class="form-control-file rounded-0"
-                                                       />
+                                                       <input type="file" name="image"
+                                                            class="form-control-file rounded-0" />
                                                   </div>
                                              </div>
                                              <div class="form-group mb-0">
-                                                  <button
-                                                       type="submit"
-                                                       class="btn btn-primary rounded-0 d-block ml-auto mr-0 tm-btn-animate tm-btn-submit tm-icon-submit"
-                                                  >
+                                                  <button type="submit"
+                                                       class="btn btn-primary rounded-0 d-block ml-auto mr-0 tm-btn-animate tm-btn-submit tm-icon-submit">
                                                        <span>Submit</span>
                                                   </button>
                                              </div>
