--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,16 +1,15 @@
 <%- include('partials/_header') -%>
+
 <body>
      <div class="tm-page-wrap mx-auto">
           <div class="position-relative">
                <%- include('partials/_navigation') -%>
-               <div
-                    class="tm-welcome-container tm-fixed-header tm-fixed-header-3"
-               >
+               <div class="tm-welcome-container tm-fixed-header tm-fixed-header-3">
                     <div class="text-center">
-                         <p
-                              class="pt-5 px-3 tm-welcome-text tm-welcome-text-2 mb-1 mt-lg-0 mt-5 text-white mx-auto"
-                         >
-                              Talk to Us<br />about any question you have
+                         <p class="pt-5 px-3 tm-welcome-text tm-welcome-text-2 mb-1 mt-lg-0 mt-5 text-white mx-auto">
+                              Talk to Us
+                              <br />
+                              about any question you have
                          </p>
                     </div>
                </div>
@@ -25,12 +24,8 @@
                     <div class="mx-auto tm-content-container">
                          <div class="row mt-3 pb-3">
                               <div class="col-12">
-                                   <div
-                                        class="mx-auto tm-about-text-container px-3"
-                                   >
-                                        <h2
-                                             class="tm-page-title mb-4 tm-text-primary"
-                                        >
+                                   <div class="mx-auto tm-about-text-container px-3">
+                                        <h2 class="tm-page-title mb-4 tm-text-primary">
                                              Update Photo
                                         </h2>
                                         <p>
@@ -39,9 +34,11 @@
                                              Aliquam tristique ut magna sit amet
                                              tincidunt. Sed tempor tellus nulla,
                                              molestie luctus lectus tincidunt
-                                             id. You are <u>not allowed</u> to
-                                             re-distribute the template ZIP file
-                                             on any template collection website.
+                                             id. You are
+                                             <u>not allowed</u>
+                                             to re-distribute the template ZIP
+                                             file on any template collection
+                                             website.
                                         </p>
                                         <p class="mb-4">
                                              Video Catalog is a free website
@@ -52,13 +49,11 @@
                                              can use it for commercial or
                                              non-commercial work. If you wish to
                                              suport
-                                             <a
-                                                  rel="nofollow"
-                                                  target="_parent"
-                                                  href="https://templatemo.com"
-                                                  class="tm-text-primary"
-                                                  >TemplateMo</a
-                                             >, please contact us.
+                                             <a rel="nofollow" target="_parent" href="https://templatemo.com"
+                                                  class="tm-text-primary">
+                                                  TemplateMo
+                                             </a>
+                                             , please contact us.
                                         </p>
                                    </div>
                               </div>
@@ -66,38 +61,21 @@
                          <div class="mx-auto pb-3 tm-about-text-container">
                               <div class="row">
                                    <div class="col-lg-12 mb-5">
-                                        <form
-                                             method="POST"
-                                             action="/photos/<%= photo._id%>?_method=PUT"
-                                             class="tm-contact-form"
-                                             encType="multipart/form-data"
-                                        >
+                                        <form method="POST" action="/photos/<%= photo._id%>?_method=PUT"
+                                             class="tm-contact-form" encType="multipart/form-data">
                                              <div class="form-group">
-                                                  <input
-                                                       type="text"
-                                                       name="title"
-                                                       value="<%= photo.title%>"
-                                                       class="form-control rounded-0"
-                                                       placeholder="Photo Title"
-                                                       required=""
-                                                  />
+                                                  <input type="text" name="title" value="<%= photo.title%>"
+                                                       class="form-control rounded-0" placeholder="Photo Title"
+                                                       required="" />
                                              </div>
                                              <div class="form-group">
-                                                  <textarea
-                                                       rows="8"
-                                                       name="description"
-                                                       class="form-control rounded-0"
-                                                       placeholder="Photo Description"
-                                                       required=""
-                                                  >
-<%= photo.description%></textarea
-                                                  >
+                                                  <textarea rows="8" name="description" class="form-control rounded-0"
+                                                       placeholder="Photo Description" required="">
+<%= photo.description%></textarea>
                                              </div>
                                              <div class="form-group mb-0">
-                                                  <button
-                                                       type="submit"
-                                                       class="btn btn-primary rounded-0 d-block ml-auto mr-0 tm-btn-animate tm-btn-submit tm-icon-submit"
-                                                  >
+                                                  <button type="submit"
+                                                       class="btn btn-primary rounded-0 d-block ml-auto mr-0 tm-btn-animate tm-btn-submit tm-icon-submit">
                                                        <span>Update</span>
                                                   </button>
                                              </div>
