--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
                               <span>Discover</span>
                          </a>
                     </div>
-               </div>
+               </div>A
 
                <div id="tm-video-container">
                     <img src="img/main_bg.jpg" alt="" />
