db connection and some issues fixed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,10 +8,12 @@
                <div class="tm-welcome-container text-center text-white">
                     <div class="tm-welcome-container-inner">
                          <p class="tm-welcome-text mb-1 text-white">
-                              Video Catalog is brought to you by TemplateMo.
+                              <h1>
+                                   Photo Upload Project
+                              </h1>
                          </p>
                          <p class="tm-welcome-text mb-5 text-white">
-                              This is a full-width video banner.
+                              Upload photos easily
                          </p>
                          <a href="#content" class="btn tm-btn-animate tm-btn-cta tm-icon-down">
                               <span>Discover</span>
