--- a/views/about.ejs
+++ b/views/about.ejs
@@ -8,8 +8,7 @@
                <div class="tm-welcome-container tm-fixed-header tm-fixed-header-2">
                     <div class="text-center">
                          <p class="pt-5 px-3 tm-welcome-text tm-welcome-text-2 mb-1 mt-lg-0 mt-5 text-white mx-auto">
-                              Another Image BG<br />it can be fixed.<br />Content
-                              will simply slide over.
+                              Upload photos easily
                          </p>
                     </div>
                </div>
@@ -25,28 +24,10 @@
                          <div class="row mt-3 mb-5 pb-3">
                               <div class="col-12">
                                    <div class="mx-auto tm-about-text-container px-3">
-                                        <h2 class="tm-page-title mb-4 tm-text-primary">
+                                        <h2 class="tm-page-title mb-4 tm-text-primary text-center">
                                              About the Video Catalog
                                         </h2>
-                                        <p class="mb-4">
-                                             Video Catalog is free HTML CSS
-                                             template for your website. This
-                                             Bootstrap v4.4.1 website template
-                                             is 100% free download for everyone.
-                                             You can modify and expand this
-                                             template for your CMS websites. You
-                                             can use it for commercial or
-                                             non-commercial work. If you wish to
-                                             support
-                                             <a href="https://templatemo.com" class="tm-text-primary">TemplateMo</a>,
-                                             please contact us.
-                                        </p>
-                                        <p class="mb-4">
-                                             You are <u>not allowed</u> to
-                                             re-distribute the template ZIP file
-                                             on any template collection website.
-                                        </p>
-                                        <p class="mb-4">
+                                        <p class="mb-4 ">
                                              Vivamus sit amet justo sed erat
                                              iaculis consequat. Nulla suscipit
                                              posuere lectus ut venenatis. Proin
