--- a/views/add.ejs
+++ b/views/add.ejs
@@ -7,7 +7,9 @@
                <div class="tm-welcome-container tm-fixed-header tm-fixed-header-3">
                     <div class="text-center">
                          <p class="pt-5 px-3 tm-welcome-text tm-welcome-text-2 mb-1 mt-lg-0 mt-5 text-white mx-auto">
-                              Talk to Us<br />about any question you have
+                              <h2 class="tm-page-title mb-4 tm-text-primary">
+                                   Add New Photo
+                              </h2>
                          </p>
                     </div>
                </div>
@@ -23,30 +25,8 @@
                          <div class="row mt-3 pb-3">
                               <div class="col-12">
                                    <div class="mx-auto tm-about-text-container px-3">
-                                        <h2 class="tm-page-title mb-4 tm-text-primary">
-                                             Add New Photo
-                                        </h2>
-                                        <p>
-                                             Integer sit amet odio id libero
-                                             tincidunt dignissim in eget arcu.
-                                             Aliquam tristique ut magna sit amet
-                                             tincidunt. Sed tempor tellus nulla,
-                                             molestie luctus lectus tincidunt
-                                             id. You are <u>not allowed</u> to
-                                             re-distribute the template ZIP file
-                                             on any template collection website.
-                                        </p>
-                                        <p class="mb-4">
-                                             Video Catalog is a free website
-                                             template for your business. This is
-                                             100% free Bootstrap v4.4.1 layout.
-                                             You can modify and adapt this
-                                             template for your CMS websites. You
-                                             can use it for commercial or
-                                             non-commercial work. If you wish to
-                                             suport
-                                             <a rel="nofollow" target="_parent" href="https://templatemo.com"
-                                                  class="tm-text-primary">TemplateMo</a>, please contact us.
+                                        <p class="mb-4 text-center">
+                                             Choose a photo and share it to the world
                                         </p>
                                    </div>
                               </div>
@@ -58,24 +38,25 @@
                                              encType="multipart/form-data">
                                              <div class="form-group">
                                                   <input type="text" name="title" class="form-control rounded-0"
-                                                       placeholder="Photo Title" required="" />
+                                                       placeholder="Photo Title" required>
                                              </div>
+
                                              <div class="form-group">
                                                   <textarea rows="8" name="description" class="form-control rounded-0"
-                                                       placeholder="Photo Description" required=""></textarea>
-                                                  <div class="form-group">
-                                                       <input type="file" name="image"
-                                                            class="form-control-file rounded-0" />
-                                                  </div>
+                                                       placeholder="Photo Description" required></textarea>
                                              </div>
+
+                                             <div class="from-group">
+                                                  <input type="file" name="image" class="form-control-file rounded-0">
+                                             </div>
+
                                              <div class="form-group mb-0">
                                                   <button type="submit"
-                                                       class="btn btn-primary rounded-0 d-block ml-auto mr-0 tm-btn-animate tm-btn-submit tm-icon-submit">
-                                                       <span>Submit</span>
-                                                  </button>
+                                                       class="btn btn-primary rounded-0 d-block ml-auto mr-0 tm-btn-animate tm-btn-submit tm-icon-submit"><span>Submit</span></button>
                                              </div>
                                         </form>
                                    </div>
+
                               </div>
                          </div>
                     </div>
