--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -7,9 +7,7 @@
                <div class="tm-welcome-container tm-fixed-header tm-fixed-header-3">
                     <div class="text-center">
                          <p class="pt-5 px-3 tm-welcome-text tm-welcome-text-2 mb-1 mt-lg-0 mt-5 text-white mx-auto">
-                              Talk to Us
-                              <br />
-                              about any question you have
+                              EDIT
                          </p>
                     </div>
                </div>
@@ -25,35 +23,11 @@
                          <div class="row mt-3 pb-3">
                               <div class="col-12">
                                    <div class="mx-auto tm-about-text-container px-3">
-                                        <h2 class="tm-page-title mb-4 tm-text-primary">
-                                             Update Photo
+                                        <h2 class="tm-page-title mb-4 tm-text-primary text-center">
+                                             Update Photo Infos
                                         </h2>
-                                        <p>
-                                             Integer sit amet odio id libero
-                                             tincidunt dignissim in eget arcu.
-                                             Aliquam tristique ut magna sit amet
-                                             tincidunt. Sed tempor tellus nulla,
-                                             molestie luctus lectus tincidunt
-                                             id. You are
-                                             <u>not allowed</u>
-                                             to re-distribute the template ZIP
-                                             file on any template collection
-                                             website.
-                                        </p>
-                                        <p class="mb-4">
-                                             Video Catalog is a free website
-                                             template for your business. This is
-                                             100% free Bootstrap v4.4.1 layout.
-                                             You can modify and adapt this
-                                             template for your CMS websites. You
-                                             can use it for commercial or
-                                             non-commercial work. If you wish to
-                                             suport
-                                             <a rel="nofollow" target="_parent" href="https://templatemo.com"
-                                                  class="tm-text-primary">
-                                                  TemplateMo
-                                             </a>
-                                             , please contact us.
+                                        <p class="mb-4 text-center">
+                                             You can easily edit photos from this page
                                         </p>
                                    </div>
                               </div>
@@ -70,8 +44,8 @@
                                              </div>
                                              <div class="form-group">
                                                   <textarea rows="8" name="description" class="form-control rounded-0"
-                                                       placeholder="Photo Description" required="">
-<%= photo.description%></textarea>
+                                                       placeholder="Photo Description" required=""><%= photo.description%>
+                                                  </textarea>
                                              </div>
                                              <div class="form-group mb-0">
                                                   <button type="submit"
