--- a/views/photo.ejs
+++ b/views/photo.ejs
@@ -8,10 +8,9 @@
 
 			<div class="tm-welcome-container tm-fixed-header tm-fixed-header-1">
 				<div class="text-center">
-					<p
-						class="pt-5 px-3 tm-welcome-text tm-welcome-text-2 mb-1 text-white mx-auto">
-						Background image can be fixed. Content will simply slide
-						over.</p>
+					<p class="pt-5 px-3 tm-welcome-text tm-welcome-text-2 mb-2 text-white mx-auto">
+						Edit Current Photo
+					</p>
 				</div>
 			</div>
 
@@ -25,8 +24,7 @@
 				<main>
 					<div class="row mb-5 pb-4">
 						<div class="col-12">
-							<img src="<%= photo.image %>" alt="Image"
-								class="img-fluid tm-catalog-item-img">
+							<img src="<%= photo.image %>" alt="Image" class="img-fluid tm-catalog-item-img">
 						</div>
 					</div>
 					<div class="row mb-5 pb-5">
